2002-11-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Port pipe to mingw.
	* Tools/gdomap.c: Fix for modern mingw interface lookup.
	Patch by Tom Koelman

2002-11-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Try again ... get
	([-setVolatileDomain:forName:]) and ([-setPersistentDomain:forName:])
	to conform to both the OpenStep standard and the current MacOS-X
	documentation.

2002-11-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: adocument property list stuff.
	* Source/NSUserDefaults.m: set integers, floats and bools as NSNumber
	Bugfix ([-setVolatileDomain:forName:]) was checking wrong list of
	domains.  Tidied.

2002-11-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSObject.h: Removed GNUstep plist extensions.
	* Source/NSObject.m: ditto.
	* Source/GSCompatibility.m: Implement new plist generator.
	* Source/NSArray.m: Use new plist code
	* Source/NSData.m: ditto
	* Source/NSDictionary.m: ditto
	* Source/NSSerializer.m: handle NSNumber and NSDate
	* Source/NSString.m: ditto, plus implement extensions to old plist
	support so we can encode NSNumber and NSDate values.
	Remove GNUstep property list extensions from the api ... make more
	like MacOS and OpenStep spec by having a central mechanism for
	generating property lists rather than spreading the code across the
	plist classes.
	Also ... maintain allocation debug accounting when making objects
	immutable.

2002-11-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: use NSString implementation of
	([descriptionWithLocale:indent:to:])
	* Source/NSUserDefaults.m: ([setObject:forKey:]) validate and raise
	exceptions if given bad info.

2002-11-07 02:21  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSString.m: (-makeImmutableCopyOnFail:): Set isa to correct
	class.

2002-11-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: Ensured some documentation in place for almost all
	methods.